--- a/src/index.html
+++ b/src/index.html
@@ -139,11 +139,6 @@
 						<div class="nav__container js-nav-container">
 							<ul class="nav__list">
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#banner" data-nav="banner">
-										POČETNA
-									</a>
-								</li>
-								<li class="nav__item">
 									<a class="nav__href js-nav-href" href="#about" data-nav="about">
 										O NAMA
 									</a>
@@ -165,6 +160,16 @@
 								</li>
 								<li class="nav__item">
 									<a class="nav__href js-nav-href" href="#info" data-nav="info">
+										NAŠ TIM
+									</a>
+								</li>
+								<li class="nav__item">
+									<a class="nav__href js-nav-href" href="#testimonials" data-nav="testimonials">
+										UTISCI
+									</a>
+								</li>
+								<li class="nav__item">
+									<a class="nav__href js-nav-href" href="#footer" data-nav="footer">
 										KONTAKT
 									</a>
 								</li>
@@ -178,7 +183,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="banner" id="banner">
+		<section class="banner part" id="banner">
 			<span class="banner__prefix">DOBRODOŠLI U</span>
 			<h1 class="banner__title">Kotrlja - Frizerski Studio</h1>
 			<div class="loader active"></div>
@@ -199,7 +204,7 @@
 				/>
 			</picture>
 		</section>
-		<section class="about" id="about">
+		<section class="about part" id="about">
 			<div class="wrap">
 				<div class="about__container">
 					<div class="about__img-container">
@@ -218,7 +223,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="time" id="time">
+		<section class="time part" id="time">
 			<div class="wrap">
 				<div class="time__container">
 					<h2 class="time__title">RADNO VREME</h2>
@@ -264,7 +269,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="services" id="services">
+		<section class="services part" id="services">
 			<div class="wrap">
 				<div class="services__container">
 					<h2 class="services__title">NAŠE USLUGE/CENOVNIK</h2>
@@ -737,7 +742,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="popular" id="popular">
+		<section class="popular part" id="popular">
 			<div class="wrap">
 				<div class="popular__container">
 					<h2 class="popular__title">POPULARNE FRIZURE</h2>
@@ -797,7 +802,7 @@
 				<div class="popular__pagination swiper-pagination js-slider-pagination"></div>
 			</div>
 		</section>
-		<section class="info" id="info">
+		<section class="info part" id="info">
 			<div class="wrap">
 				<div class="info__container">
 					<div class="info__intro">
@@ -886,7 +891,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="testimonials" id="testimonials">
+		<section class="testimonials part" id="testimonials">
 			<h3 class="testimonials__title">ZADOVOLJNE MUŠTERIJE</h3>
 			<img
 				class="testimonials__logo"
@@ -944,7 +949,7 @@
 				<div class="testimonials__pagination swiper-pagination js-testimonials-pagination"></div>
 			</div>
 		</section>
-		<footer class="footer" id="footer">
+		<footer class="footer part" id="footer">
 			<div class="footer__container">
 				<div class="footer__top">
 					<div class="wrap">
