--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,9 @@
 				</div>
 			</div>
 		</header>
+		<a class="arrow-up js-arrow-top" aria-label="slide to the top" href="#banner">
+			<i class="icon ico-slider-arrow"></i>
+		</a>
 		<section class="banner part" id="banner">
 			<span class="banner__prefix">DOBRODOŠLI U</span>
 			<h1 class="banner__title">Kotrlja - Frizerski Studio</h1>
@@ -981,46 +984,10 @@
 								<li class="footer__social">
 									<a
 										class="footer__social-link"
-										href="https://twitter.com/"
-										aria-label="Twitter social link"
-									target="_blank">
-										<span class="icon ico-twitter"></span>
-									</a>
-								</li>
-								<li class="footer__social">
-									<a
-										class="footer__social-link"
 										href="https://www.instagram.com/"
 										aria-label="Instagram social link"
 									target="_blank">
 										<span class="icon ico-instagram"></span>
-									</a>
-								</li>
-								<li class="footer__social">
-									<a
-										class="footer__social-link"
-										href="https://www.pinterest.com/"
-										aria-label="Pinterest social link"
-									target="_blank">
-										<span class="icon ico-pinterest"></span>
-									</a>
-								</li>
-								<li class="footer__social">
-									<a
-										class="footer__social-link"
-										href="https://www.youtube.com/"
-										aria-label="Youtube social link"
-									target="_blank">
-										<span class="icon ico-youtube"></span>
-									</a>
-								</li>
-								<li class="footer__social">
-									<a
-										class="footer__social-link"
-										href="https://www.google.com/"
-										aria-label="Google+ social link"
-									target="_blank">
-										<span class="icon ico-google"></span>
 									</a>
 								</li>
 							</ul>
@@ -1029,9 +996,7 @@
 				</div>
 				<div class="footer__bottom">
 					<div class="wrap">
-						<span class="footer__copy"
-							>© Copyright Hobber 2023. All Rights Reserved. By Anevem</span
-						>
+						<span class="footer__copy">© Copyright Kotrlja Frizerski Studio 2023. All Rights Reserved. <br>By <a href="https://anevem.com/" target="_blank">Anevem</a></span>
 					</div>
 				</div>
 			</div>
