--- a/src/index.html
+++ b/src/index.html
@@ -217,11 +217,25 @@
 					<div class="about__info">
 						<h2 class="about__title">O NAMA</h2>
 						<img class="about__logo" src="assets/svg/logo-small2.svg" alt="Frizerski Studio Kotrlja">
-						<p class="about__text">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.
-							<br><br>
-							"Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis".
-						</p>
+						<div class="about__box">
+							<p class="about__text">
+								Dobrodošli u “Frizerski studio Kotrlja”, gde naš cilj nije samo zadovoljiti vaše potrebe za negom kose, već vam pružiti jedinstveno iskustvo lepote. Naš tim visoko kvalifikovanih frizera vam nudi najbolju uslugu, kreativnost i najnovije trendove u industriji.
+								<br><br>
+								U našem salonu, vaša kosa je u rukama stručnjaka. Koristimo samo najkvalitetnije proizvode i tehnike kako bismo vašoj kosi dali jedinstveni sjaj i vitalnost!
+								<br><br>
+								Bez obzira na to da li želite osvežiti vašu svakodnevnu frizuru ili pripremiti poseban izgled za važan događaj, naši frizeri su uvek spremni da vas poslušaju i prilagode vašu frizuru vašem jedinstvenom stilu i ličnosti!
+								<br><br>
+								Naša misija nije samo da vam pružimo izvanrednu negu kose, već i da vam omogućimo da se osećate ugodno i opušteno dok boravite u našem salonu.
+								<br><br>
+								U našem ambijentu, koji je osmišljen kako bismo stvorili savršeno mesto za vašu opuštajuću kozmetičku rutinu, pronaći ćete mir i udobnost u kojima možete uživati.
+								<br><br>
+								Mi smo posvećeni vašoj lepoti i dobrobiti, i zato ćemo uvek težiti ka tome da pružimo najbolju moguću uslugu. Uvek pratimo najnovije trendove i tehnike kako bismo vas držali korak ispred ostalih!
+								<br><br>
+								Naši frizeri su profesionalni, ljubazni i puni entuzijazma, spremni da vam pruže najbolju moguću uslugu.
+								<br><br>
+								Hvala vam što ste odabrali naš salon za kosu. Radujemo se što ćemo vam pomoći da ostvarite vaše ciljeve lepote i postignete izgled koji ćete obožavati!
+							</p>
+						</div>
 						<img class="about__signature" src="assets/svg/signature.svg" alt="Signature">
 					</div>
 				</div>
@@ -240,11 +254,11 @@
 						<div class="time__group time__group--first">
 							<div class="time__cell">
 								<span class="time__day">PON</span>
-								<span class="time__hours">10:00 - 17:00</span>
+								<span class="time__hours">Ne radimo</span>
 							</div>
 							<div class="time__cell">
 								<span class="time__day">UTO</span>
-								<span class="time__hours">10:00 - 15:00</span>
+								<span class="time__hours">10:00 - 20:00</span>
 							</div>
 							<div class="time__cell">
 								<span class="time__day">SRE</span>
@@ -254,15 +268,15 @@
 						<div class="time__group time__group--second">
 							<div class="time__cell">
 								<span class="time__day">ČET</span>
-								<span class="time__hours">10:00 - 17:00</span>
+								<span class="time__hours">10:00 - 20:00</span>
 							</div>
 							<div class="time__cell">
 								<span class="time__day">PET</span>
-								<span class="time__hours">10:00 - 17:00</span>
+								<span class="time__hours">10:00 - 20:00</span>
 							</div>
 							<div class="time__cell">
 								<span class="time__day">SUB+NED</span>
-								<span class="time__hours">Zatvoreno</span>
+								<span class="time__hours">10:00 - 20:00</span>
 							</div>
 						</div>
 					</div>
@@ -783,22 +797,22 @@
 					<div class="popular__slider-second swiper js-popular-second-slider">
 						<div class="popular__slider-second-wrapper swiper-wrapper">
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur..</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 							<div class="popular__slider-second-slide swiper-slide">
-								<p class="popular__desc">Curabitur pellentesque neque eget diam.</p>
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
 						</div>
 					</div>
@@ -817,7 +831,7 @@
 						<div class="swiper-wrapper">
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img" src="assets/images/info/info1.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Nikola-Kotrlja.png" alt="Frizer">
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
@@ -861,13 +875,73 @@
 									</ul>
 								</div>
 							</div>
+							<div class="info__slide swiper-slide">
+								<div class="info__img-container">
+									<img class="info__img info__img--left" src="assets/images/info/Anđela-Pajic.png" alt="Frizer">
+								</div>
+								<div class="info__box">
+									<h3 class="info__name">Anđela Pajić</h3>
+									<h4 class="info__position">Frizer</h4>
+									<button class="info__bio-open js-bio-open">
+										<i class="icon ico-bio" aria-label="Open bio"></i>
+									</button>
+									<div class="info__desc">
+										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
+											<i class="icon ico-close"></i>
+										</button>
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										</p>
+									</div>
+								</div>
+							</div>
 
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/info2.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Milica-Stanin.png" alt="Frizer">
 								</div>
 								<div class="info__box">
-									<h3 class="info__name">Marko Marković</h3>
+									<h3 class="info__name">Milica Stanin</h3>
+									<h4 class="info__position">Frizer</h4>
+									<button class="info__bio-open js-bio-open">
+										<i class="icon ico-bio" aria-label="Open bio"></i>
+									</button>
+									<div class="info__desc">
+										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
+											<i class="icon ico-close"></i>
+										</button>
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="info__slide swiper-slide">
+								<div class="info__img-container">
+									<img class="info__img info__img--left info__img--specific" src="assets/images/info/Marinela-Ranisavljevic.png" alt="Frizer">
+								</div>
+								<div class="info__box">
+									<h3 class="info__name">Marinela Ranisavljević</h3>
+									<h4 class="info__position">Frizer</h4>
+									<button class="info__bio-open js-bio-open">
+										<i class="icon ico-bio" aria-label="Open bio"></i>
+									</button>
+									<div class="info__desc">
+										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
+											<i class="icon ico-close"></i>
+										</button>
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="info__slide swiper-slide">
+								<div class="info__img-container">
+									<img class="info__img info__img--left" src="assets/images/info/Beric-Aleksandar.png" alt="Frizer">
+								</div>
+								<div class="info__box">
+									<h3 class="info__name">Berić Aleksandar</h3>
 									<h4 class="info__position">Frizer</h4>
 									<button class="info__bio-open js-bio-open">
 										<i class="icon ico-bio" aria-label="Open bio"></i>
@@ -883,6 +957,7 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="info__controls js-info-controls">
 							<button class="info__btn info__btn--prev js-info-prev" aria-label="Slide to previous slide">
 								<span class="icon ico-slider-arrow"></span>
