--- a/src/index.html
+++ b/src/index.html
@@ -1046,7 +1046,7 @@
 							<a href="tel: +38160000000" class="footer__phone"
 								>+381 000-00-00</a
 							>
-							<span class="footer__location">Grad, mesto, ulica i broj</span>
+							<span class="footer__location">Bulevar Zorana Đinđića 41 stan 5</span>
 							<ul class="footer__social-media">
 								<li class="footer__social">
 									<a
