bio + signature + hide

--- a/src/index.html
+++ b/src/index.html
@@ -162,11 +162,11 @@
 										NAŠ TIM
 									</a>
 								</li>
-								<li class="nav__item">
+								<!-- <li class="nav__item">
 									<a class="nav__href js-nav-href" href="#testimonials" data-nav="testimonials">
 										UTISCI
 									</a>
-								</li>
+								</li> -->
 								<li class="nav__item">
 									<a class="nav__href js-nav-href" href="#footer" data-nav="footer">
 										KONTAKT
@@ -280,10 +280,6 @@
 							</div>
 						</div>
 					</div>
-					<p class="time__info">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur
-						pellentesque neque eget diam.
-					</p>
 				</div>
 			</div>
 		</section>
@@ -856,9 +852,19 @@
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
 											<i class="icon ico-close"></i>
 										</button>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.
-										</p>
+										<div class="info__bio">
+											<p>
+												Moje ime je Nikola Kotrlja i ponosno mogu reći da sam frizer već osam godina. Tokom tog vremena, stekao sam značajno iskustvo u ovoj industriji, radeći sa različitim tipovima kose i prilagođavajući se individualnim potrebama svakog klijenta!
+												<br><br>
+												Uz to, imam i značajno iskustvo u edukaciji drugih frizera. Radio sam sa poznatim brendom “Keune” kao edukator, pružajući obuku i mentorstvo drugim stručnjacima iz industrije i pomažući im da razviju svoje veštine. Osim toga, pohađao sam i školu za frizere i edukatore u Holandiji, gde sam imao priliku da usavršim svoje znanje i veštine u ovoj oblasti!
+												<br><br>
+												Moja strast prema frizerstvu i razvoju industrije dovela me je do učešća u mnogim revijama kod nas i u inostranstvu. Kroz ove revije, imao sam priliku da pokažem svoje kreativne ideje i pristupe, kao i da radim sa nekim od najprestižnijih frizera u industriji i steknem nova znanja i veštine!
+												<br><br>
+												Fokusiram se na tehnike kao što su balayage, šišanje, nadogradnja i uz to pružam obuku istih kao i mentorstvo onima koji tek počinju u ovom poslu.
+												<br><br>
+												“O sebi” bih rekao da i pored velikog broja godina iskustva i dalje sa neumornom željom uvek učim i unapređujem se, kao i da pružim najbolju moguću uslugu svojim klijentima i  pomognem drugim frizerima da razviju svoje veštine i postanu uspešni u ovom poslu!
+											</p>
+										</div>
 									</div>
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
@@ -889,9 +895,19 @@
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
 											<i class="icon ico-close"></i>
 										</button>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										</p>
+										<div class="info__bio">
+											<p>
+												Moje ime je Andjela Pajić i bavim se profesionalnom nadogradnjom svilenih trepavica. Kao strastveni ljubitelj lepote, svoje znanje i veštine stekla sam na prestižnoj akademiji 'Purity' 2021. godine.
+												<br><br>
+												Od tada pa sve do danas, usavršavala sam svoje veštine radeći u salonima na teritoriji Vršca, što mi je omogućilo prepoznatljivost na tržištu i kasnije samostalan rad. Nakon nekoliko godina iskustva u ovom poslu, uspela sam razviti sopstveni stil i pristup radu, koji se fokusira na kvalitet i pažnju prema svakom klijentu.
+												<br><br>
+												Kao vrlo talentovana i predana svom poslu, posvećena sam tome da prema svakom klijentu pristupim individualno i pažljivo prilagodim svoj rad njihovim potrebama.
+												<br>
+												Moj cilj je da svaki klijent izgleda i oseća se najbolje moguće nakon tretmana!
+												<br><br>
+												Vrlo sam posvećena svakom klijentu sa svrhom, kako da nadmašim njihova očekivanja tako i da se osećaju ugodno i prijatno.
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -910,9 +926,17 @@
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
 											<i class="icon ico-close"></i>
 										</button>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										</p>
+										<div class="info__bio">
+											<p>
+												Moje ime je Milica Stanin, samouki sam šminker sa istaknutim talentom još od samog početka svoje karijere.
+												<br>
+												Sa svojih 16 godina sam se počela baviti šminkanjem u mom rodnom gradu Vršcu i svojim prirodnim talentom stekla značajno iskustvo radeći sa različitim tipovima kože i prilagođavajući se individualnim potrebama svakog klijenta.
+												<br><br>
+												Svoje veštine i tehnike sam unapredila radeći sa slavnom šminkerkom Kristinom Uhelji, koja mi je pomogla da svoje sposobnosti podignem na viši nivo. Uvek sam u toku sa najnovijim trendovima i tehnikama i naročito volim da isprobavam nove stvari.
+												<br>
+												Posebno bih naglasila da mi je drago što mi ova vrsta zanimanja omogućava da budem kreativna i dozvoljava da eksperimentišem novim tehnikama kako bih svakom klijentu pružila najbolji mogući izgled.
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -921,7 +945,7 @@
 									<img class="info__img info__img--left info__img--specific" src="assets/images/info/Marinela-Ranisavljevic.png" alt="Frizer">
 								</div>
 								<div class="info__box">
-									<h3 class="info__name">Marinela Ranisavljević</h3>
+									<h3 class="info__name info__name--small">Marinela Ranisavljević</h3>
 									<h4 class="info__position">Frizer</h4>
 									<button class="info__bio-open js-bio-open">
 										<i class="icon ico-bio" aria-label="Open bio"></i>
@@ -930,9 +954,17 @@
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
 											<i class="icon ico-close"></i>
 										</button>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										</p>
+										<div class="info__bio">
+											<p>
+												Zdravo ja sam Marinela Ranisavljević, frizerka koja je postala deo sveta frizera 2017. godine.
+												<br>
+												Iako je to možda “malo” godina iskustva, ja sam temeljno gradila svoj put od samog početka i paralelno sa svojim radom, posvećeno radila na edukacijama iz sfere stilizovanja kose, kako bih se usavršavala i napredovala u svojoj karijeri!
+												<br><br>
+												Svojim radom, usavršavam se iz dana u dan i nadograđujem svoje znanje, a zadovoljstvo klijenata je ono što me najviše motiviše i ispunjava nakon uspešno odrađenog posla. Spremna za sve naredno što dolazi, jer uz bogato dosadašnje iskustvo kao i zadovoljstvo klijenata, ostajem motivisana za svaku vrstu profesionalnog nadogradjivana!
+												<br><br>
+												Ponosno mogu reći da sam se nedavno pridružila “Frizerskom salonu Kotrlja", gde planiram nastaviti razvijati svoje veštine kao i doprineseti rastu i uspehu salona! Uz to verujem da će mi ovaj korak omogućiti napredak u karijeri, priliku da steknem veliku količinu korisnog iskustva kao i doprineti mnogo lepim momentima koje ću uvek pamtiti!
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -950,9 +982,23 @@
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
 											<i class="icon ico-close"></i>
 										</button>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-										</p>
+										<div class="info__bio">
+											<p>
+												Moje ime je Aleksandar Berić i ja sam profesionalni frizer sa dugogodišnjim iskustvom u industriji lepote! Završio sam školu za negu lepote i od tada se aktivno bavim frizerskim poslom već devetnaest godina.
+												<br><br>
+												Tokom svoje karijere, imao sam priliku da radim na mnogim domaćim i stranim revijama, kao i da budem angažovan na televiziji. Kao modni frizer, imao sam čast da učestvujem u snimanju spotova i foto shooting-a, gde sam svojom kreativnošću i veštinama doprineo uspehu projekata!
+												<br><br>
+												Kao profesionalac, uvek težim da usavršavam svoje znanje i veštine. Redovno pohađam edukacije i seminare, prateći najnovije trendove i tehnike u industriji.
+												<br>
+												Takođe, pratim i najnoviju tehnologiju i trendove u kozmetičkoj industriji kako bih svojim klijentima pružio najbolje moguće usluge!
+												<br><br>
+												Moje dugogodišnje iskustvo, kreativnost i posvećenost omogućavaju mi da stvorim jedinstvene frizure za svoje klijente. Uz to, uvek se trudim da stvorim pozitivnu atmosferu u salonu i pružim ne samo kvalitetne usluge friziranja, već i iskustvo koje će se dugo pamtiti.
+												<br><br>
+												Kao profesionalni frizer, ponosan sam na svoj rad i zahvalan sam svim svojim klijentima na poverenju koje mi ukazuju.
+												<br><br>
+												Edukacije: Atelje Dragan, Lisap akademija, Inebrija seminari, Subrina seminari
+											</ul>
+										</div>
 									</div>
 								</div>
 							</div>
