--- a/src/index.html
+++ b/src/index.html
@@ -1,100 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/style.css" />
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.css">
 		<link
 			rel="preload"
 			type="font/woff2"
 			as="font"
 			crossorigin
 			href="/assets/fonts/Montserrat.woff2"
-		/>
+		>
 		<link
 			rel="preload"
 			type="font/woff2"
 			as="font"
 			crossorigin
 			href="/assets/fonts/BreeSerif-Regular.woff2"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="57x57"
 			href="favicon/apple-icon-57x57.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="60x60"
 			href="favicon/apple-icon-60x60.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="72x72"
 			href="favicon/apple-icon-72x72.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="76x76"
 			href="favicon/apple-icon-76x76.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="114x114"
 			href="favicon/apple-icon-114x114.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="120x120"
 			href="favicon/apple-icon-120x120.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="144x144"
 			href="favicon/apple-icon-144x144.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="152x152"
 			href="favicon/apple-icon-152x152.png"
-		/>
+		>
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
 			href="favicon/apple-icon-180x180.png"
-		/>
+		>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="192x192"
 			href="favicon/android-icon-192x192.png"
-		/>
+		>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
 			href="favicon/favicon-32x32.png"
-		/>
+		>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="96x96"
 			href="favicon/favicon-96x96.png"
-		/>
+		>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
 			href="favicon/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="favicon/manifest.json" />
-		<meta name="msapplication-TileColor" content="#ffffff" />
+		>
+		<link rel="manifest" href="favicon/manifest.json" >
+		<meta name="msapplication-TileColor" content="#ffffff" >
 		<meta
 			name="msapplication-TileImage"
 			content="favicon/ms-icon-144x144.png"
-		/>
-		<meta name="theme-color" content="#ffffff" />
+		>
+		<meta name="theme-color" content="#ffffff" >
 		<title>Kotrlja - Frizerski Studio</title>
 		<script>
 			var t = Date.now();
@@ -118,9 +118,7 @@
 				<div class="header__container js-header-container">
 					<div class="header__logo">
 						<svg class="header__logo-img" viewBox="0 0 173.39 84.36">
-							<path
-								d="m151.11 84.36 22.28-49.34-13.81-5.69c.66 3.09.48 6.73-.73 10.37-2.72 8.21-9.25 11.47-15.31 10.64-9.92-1.37-11.63-11.6-8.91-19.8 1.36-4.12 3.76-7.45 6.54-9.5l-17.18-6.92c1.05 3.55.5 7.6-.14 11.79-1.83 12.07-10.47 17.38-17.57 16.23-9.17-1.47-12.06-9.11-11.37-18.83.5-7.09 4.54-12.92 9.09-16.34L86.69 0 69.38 6.97c4.54 3.42 8.59 9.26 9.09 16.34.69 9.72-2.2 17.36-11.37 18.83-7.1 1.15-15.74-4.16-17.56-16.23-.63-4.19-1.19-8.24-.14-11.79l-17.19 6.92c2.78 2.06 5.18 5.39 6.55 9.5 2.72 8.2 1.01 18.43-8.91 19.8-6.06.84-12.59-2.43-15.31-10.64-1.21-3.64-1.39-7.28-.72-10.37L0 35.03l22.44 49.34h128.67Z"
-							/>
+							<path d="m151.11 84.36 22.28-49.34-13.81-5.69c.66 3.09.48 6.73-.73 10.37-2.72 8.21-9.25 11.47-15.31 10.64-9.92-1.37-11.63-11.6-8.91-19.8 1.36-4.12 3.76-7.45 6.54-9.5l-17.18-6.92c1.05 3.55.5 7.6-.14 11.79-1.83 12.07-10.47 17.38-17.57 16.23-9.17-1.47-12.06-9.11-11.37-18.83.5-7.09 4.54-12.92 9.09-16.34L86.69 0 69.38 6.97c4.54 3.42 8.59 9.26 9.09 16.34.69 9.72-2.2 17.36-11.37 18.83-7.1 1.15-15.74-4.16-17.56-16.23-.63-4.19-1.19-8.24-.14-11.79l-17.19 6.92c2.78 2.06 5.18 5.39 6.55 9.5 2.72 8.2 1.01 18.43-8.91 19.8-6.06.84-12.59-2.43-15.31-10.64-1.21-3.64-1.39-7.28-.72-10.37L0 35.03l22.44 49.34h128.67Z">
 						</svg>
 						<a
 							class="header__logo-link"
@@ -196,16 +194,16 @@
 				<source
 					media="(max-width: 767px)"
 					srcset="assets/images/banner/banner-s.jpg"
-				/>
+				>
 				<source
 					media="(min-width: 768px) and (max-width: 1024px)"
 					srcset="assets/images/banner/banner-m.jpg"
-				/>
+				>
 				<img
 					class="banner__bg-img"
 					src="assets/images/banner/banner-lg.jpg"
 					alt="Banner image"
-				/>
+				>
 			</picture>
 		</section>
 		<section class="about part" id="about">
@@ -249,7 +247,7 @@
 						class="time__logo"
 						src="assets/svg/logo-small.svg"
 						alt="Logo kotrlja"
-					/>
+					>
 					<div class="time__items">
 						<div class="time__group time__group--first">
 							<div class="time__cell">
@@ -831,7 +829,7 @@
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="mailto: example@example.com">
+											<a class="info__social-link" href="mailto:example@example.com">
 												<span class="icon ico-mail"></span>
 											</a>
 										</li>
@@ -845,8 +843,8 @@
 								<div class="info__box">
 									<h3 class="info__name">Nikola Kotrlja</h3>
 									<h4 class="info__position">Osnivač & Frizer</h4>
-									<button class="info__bio-open js-bio-open">
-										<i class="icon ico-bio" aria-label="Open bio"></i>
+									<button class="info__bio-open js-bio-open" aria-label="Open bio">
+										<i class="icon ico-bio"></i>
 									</button>
 									<div class="info__desc">
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
@@ -869,7 +867,7 @@
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="mailto: example@example.com">
+											<a class="info__social-link" href="mailto:example@example.com">
 												<span class="icon ico-mail"></span>
 											</a>
 										</li>
@@ -888,8 +886,8 @@
 								<div class="info__box">
 									<h3 class="info__name">Anđela Pajić</h3>
 									<h4 class="info__position">Frizer</h4>
-									<button class="info__bio-open js-bio-open">
-										<i class="icon ico-bio" aria-label="Open bio"></i>
+									<button class="info__bio-open js-bio-open" aria-label="Open bio">
+										<i class="icon ico-bio"></i>
 									</button>
 									<div class="info__desc">
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
@@ -919,8 +917,8 @@
 								<div class="info__box">
 									<h3 class="info__name">Milica Stanin</h3>
 									<h4 class="info__position">Frizer</h4>
-									<button class="info__bio-open js-bio-open">
-										<i class="icon ico-bio" aria-label="Open bio"></i>
+									<button class="info__bio-open js-bio-open" aria-label="Open bio">
+										<i class="icon ico-bio"></i>
 									</button>
 									<div class="info__desc">
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
@@ -947,8 +945,8 @@
 								<div class="info__box">
 									<h3 class="info__name info__name--small">Marinela Ranisavljević</h3>
 									<h4 class="info__position">Frizer</h4>
-									<button class="info__bio-open js-bio-open">
-										<i class="icon ico-bio" aria-label="Open bio"></i>
+									<button class="info__bio-open js-bio-open" aria-label="Open bio">
+										<i class="icon ico-bio"></i>
 									</button>
 									<div class="info__desc">
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
@@ -975,8 +973,8 @@
 								<div class="info__box">
 									<h3 class="info__name">Berić Aleksandar</h3>
 									<h4 class="info__position">Frizer</h4>
-									<button class="info__bio-open js-bio-open">
-										<i class="icon ico-bio" aria-label="Open bio"></i>
+									<button class="info__bio-open js-bio-open" aria-label="Open bio">
+										<i class="icon ico-bio"></i>
 									</button>
 									<div class="info__desc">
 										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
@@ -997,7 +995,6 @@
 												Kao profesionalni frizer, ponosan sam na svoj rad i zahvalan sam svim svojim klijentima na poverenju koje mi ukazuju.
 												<br><br>
 												Edukacije: Atelje Dragan, Lisap akademija, Inebrija seminari, Subrina seminari
-											</ul>
 										</div>
 									</div>
 								</div>
@@ -1022,7 +1019,7 @@
 				class="testimonials__logo"
 				src="assets/svg/logo-small.svg"
 				alt="Frizerski Studio Kotrlja logo"
-			/>
+			>
 			<div class="testimonials__slider swiper js-testimonials-slider">
 				<div class="testimonials__wrapper swiper-wrapper">
 					<div class="testimonials__slider swiper-slide">
@@ -1035,7 +1032,7 @@
 								class="client__img"
 								src="assets/images/testimonial/testimonial.jpg"
 								alt="Zadovoljna musterija"
-							/>
+							>
 							<h4 class="client__name">Marko Marković</h4>
 							<span class="client__desc">Mušterija</span>
 						</div>
@@ -1050,7 +1047,7 @@
 								class="client__img"
 								src="assets/images/testimonial/testimonial.jpg"
 								alt="Zadovoljna musterija"
-							/>
+							>
 							<h4 class="client__name">Marko Marković</h4>
 							<span class="client__desc">Mušterija</span>
 						</div>
@@ -1065,7 +1062,7 @@
 								class="client__img"
 								src="assets/images/testimonial/testimonial.jpg"
 								alt="Zadovoljna musterija"
-							/>
+							>
 							<h4 class="client__name">Marko Marković</h4>
 							<span class="client__desc">Mušterija</span>
 						</div>
@@ -1083,13 +1080,13 @@
 								class="footer__logo"
 								src="assets/svg/logo-footer.svg"
 								alt="Kotrlja Frizerski Studio Logo"
-							/>
+							>
 							<a
 								class="footer__mail"
 								href="mailto:kotrljafrizerskistudio@gmail.com"
 								>kotrljafrizerskistudio@gmail.com</a
 							>
-							<a href="tel: +38160000000" class="footer__phone"
+							<a href="tel:+38160000000" class="footer__phone"
 								>+381 000-00-00</a
 							>
 							<span class="footer__location">Bulevar Zorana Đinđića 41 stan 5</span>
