--- a/src/index.html
+++ b/src/index.html
@@ -881,7 +881,7 @@
 							</div>
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Anđela-Pajic.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Andjela-Pajic.png" alt="Frizer">
 								</div>
 								<div class="info__box">
 									<h3 class="info__name">Anđela Pajić</h3>
