--- a/src/index.html
+++ b/src/index.html
@@ -885,7 +885,7 @@
 								</div>
 								<div class="info__box">
 									<h3 class="info__name">Anđela Pajić</h3>
-									<h4 class="info__position">Frizer</h4>
+									<h4 class="info__position">Svilene trepavice</h4>
 									<button class="info__bio-open js-bio-open" aria-label="Open bio">
 										<i class="icon ico-bio"></i>
 									</button>
@@ -916,7 +916,7 @@
 								</div>
 								<div class="info__box">
 									<h3 class="info__name">Milica Stanin</h3>
-									<h4 class="info__position">Frizer</h4>
+									<h4 class="info__position">Šminker</h4>
 									<button class="info__bio-open js-bio-open" aria-label="Open bio">
 										<i class="icon ico-bio"></i>
 									</button>
