--- a/src/index.html
+++ b/src/index.html
@@ -818,23 +818,23 @@
 			<div class="wrap">
 				<div class="info__container">
 					<div class="info__intro">
-						<h2 class="info__title">NAŠI FRIZERI</h2>
+						<h2 class="info__title">NAŠ TIM</h2>
 						<img class="info__logo" src="assets/svg/logo-small2.svg" alt="Logo">
 					</div>
 					<div class="info__slider swiper js-info">
 						<div class="swiper-wrapper">
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Nikola-Kotrlja.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Nikola-Kotrlja.png" alt="Nikola Kotrlja">
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="mailto:example@example.com">
+											<a class="info__social-link" href="mailto:nikola.kotrlja@nika.co.rs" aria-label="Nikola Kotrlja e-mail"
 												<span class="icon ico-mail"></span>
 											</a>
 										</li>
 										<li class="info__social">
-											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank" aria-label="Nikola Kotrlja instagram">
 												<span class="icon ico-instagram"></span>
 											</a>
 										</li>
@@ -867,12 +867,12 @@
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="mailto:example@example.com">
+											<a class="info__social-link" href="mailto:nikola.kotrlja@nika.co.rs" aria-label="Nikola Kotrlja e-mail">
 												<span class="icon ico-mail"></span>
 											</a>
 										</li>
 										<li class="info__social">
-											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank" aria-label="Nikola Kotrlja instagram">
 												<span class="icon ico-instagram"></span>
 											</a>
 										</li>
@@ -881,7 +881,7 @@
 							</div>
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Andjela-Pajic.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Andjela-Pajic.png" alt="Andjela Pajic">
 								</div>
 								<div class="info__box">
 									<h3 class="info__name">Anđela Pajić</h3>
@@ -912,11 +912,11 @@
 
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Milica-Stanin.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Milica-Stanin.png" alt="Milica Stanin">
 								</div>
 								<div class="info__box">
 									<h3 class="info__name">Milica Stanin</h3>
-									<h4 class="info__position">Šminker</h4>
+									<h4 class="info__position">Osnivač & Šminker</h4>
 									<button class="info__bio-open js-bio-open" aria-label="Open bio">
 										<i class="icon ico-bio"></i>
 									</button>
@@ -926,6 +926,8 @@
 										</button>
 										<div class="info__bio">
 											<p>
+												Frizerskom ateljeu ‘KOTRLJA’ pridružuje se ‘SPLENDIDA BELLEZZA’ , šminkerski deo, za koji je zadužena Milica Stanin.
+												<br><br>
 												Moje ime je Milica Stanin, samouki sam šminker sa istaknutim talentom još od samog početka svoje karijere.
 												<br><br>
 												Sa svojih 16 godina sam se počela baviti šminkanjem u mom rodnom gradu Vršcu i svojim prirodnim talentom stekla značajno iskustvo radeći sa različitim tipovima kože i prilagođavajući se individualnim potrebama svakog klijenta.
@@ -940,7 +942,7 @@
 							</div>
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left info__img--specific" src="assets/images/info/Marinela-Ranisavljevic.png" alt="Frizer">
+									<img class="info__img info__img--left info__img--specific" src="assets/images/info/Marinela-Ranisavljevic.png" alt="Marinela Ranisavljevic">
 								</div>
 								<div class="info__box">
 									<h3 class="info__name info__name--small">Marinela Ranisavljević</h3>
@@ -968,10 +970,10 @@
 							</div>
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Beric-Aleksandar.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/Beljic-Aleksandar.png" alt="Beljic Aleksandar">
 								</div>
 								<div class="info__box">
-									<h3 class="info__name">Berić Aleksandar</h3>
+									<h3 class="info__name">Beljić Aleksandar</h3>
 									<h4 class="info__position">Frizer</h4>
 									<button class="info__bio-open js-bio-open" aria-label="Open bio">
 										<i class="icon ico-bio"></i>
@@ -982,7 +984,7 @@
 										</button>
 										<div class="info__bio">
 											<p>
-												Moje ime je Aleksandar Berić i ja sam profesionalni frizer sa dugogodišnjim iskustvom u industriji lepote! Završio sam školu za negu lepote i od tada se aktivno bavim frizerskim poslom već devetnaest godina.
+												Moje ime je Aleksandar Beljić i ja sam profesionalni frizer sa dugogodišnjim iskustvom u industriji lepote! Završio sam školu za negu lepote i od tada se aktivno bavim frizerskim poslom već devetnaest godina.
 												<br><br>
 												Tokom svoje karijere, imao sam priliku da radim na mnogim domaćim i stranim revijama, kao i da budem angažovan na televiziji. Kao modni frizer, imao sam čast da učestvujem u snimanju spotova i foto shooting-a, gde sam svojom kreativnošću i veštinama doprineo uspehu projekata!
 												<br><br>
@@ -1083,8 +1085,8 @@
 							>
 							<a
 								class="footer__mail"
-								href="mailto:kotrljafrizerskistudio@gmail.com"
-								>kotrljafrizerskistudio@gmail.com</a
+								href="mailto:frizerskistudiokotrlja@nika.co.rs"
+								>frizerskistudiokotrlja@nika.co.rs</a
 							>
 							<a href="tel:+38160000000" class="footer__phone"
 								>+381 000-00-00</a
