--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,16 @@
 		>
 		<meta name="theme-color" content="#ffffff" >
 		<title>Kotrlja - Frizerski Studio</title>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-LEHCTD1JK2"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-LEHCTD1JK2');
+		</script>
+		<meta name="google-site-verification" content="ConxxW0BVSWaWe5JzGcm7Md-DOQgIuJMsbYu_eirIOY" />
 		<script>
 			var t = Date.now();
 			window.addEventListener("load", function() {
@@ -1088,8 +1098,8 @@
 								href="mailto:frizerskistudiokotrlja@nika.co.rs"
 								>frizerskistudiokotrlja@nika.co.rs</a
 							>
-							<a href="tel:+38160000000" class="footer__phone"
-								>+381 000-00-00</a
+							<a href="tel:+381668042680" class="footer__phone"
+								>+381 66-80-42-680</a
 							>
 							<span class="footer__location">Bulevar Zorana Đinđića 41 stan 5</span>
 							<ul class="footer__social-media">
