--- a/src/index.html
+++ b/src/index.html
@@ -1115,7 +1115,7 @@
 								<li class="footer__social">
 									<a
 										class="footer__social-link"
-										href="https://www.instagram.com/"
+										href="https://www.instagram.com/frizerskistudio_kotrlja/"
 										aria-label="Instagram social link"
 									target="_blank">
 										<span class="icon ico-instagram"></span>
