--- a/src/index.html
+++ b/src/index.html
@@ -839,7 +839,7 @@
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="mailto:nikola.kotrlja@nika.co.rs" aria-label="Nikola Kotrlja e-mail"
+											<a class="info__social-link" href="mailto:nikola.kotrlja@nika.co.rs" aria-label="Nikola Kotrlja e-mail">
 												<span class="icon ico-mail"></span>
 											</a>
 										</li>
@@ -1101,7 +1101,7 @@
 							<a href="tel:+381668042680" class="footer__phone"
 								>+381 66-80-42-680</a
 							>
-							<span class="footer__location">Bulevar Zorana Đinđića 41 stan 5</span>
+							<a class="footer__location" href="https://goo.gl/maps/zvkvJjhXit8gsbir7" target="_blank">Bulevar Zorana Đinđića 41 stan 5</a>
 							<ul class="footer__social-media">
 								<li class="footer__social">
 									<a
